[package]
name = "Qit"
license = "MIT"
author = ["epaperamic@gmail.com"]
version = "0.1.4"
edition = "2021"
readme = "README.md"
description = "Quantum computer simulator library without matrix operations."
repository = "https://github.com/aokyut/Qit.git"
categories = ["simulation"]
keywords = ["engine", "simulation", "quantum"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
github = { repository = "aokyut/Qit.git", workflow = "Tests" }

[dependencies]
rand = "0.8.5"
